feat MongoDB Integration for Storing Userand Email

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 GOOGLE_CLIENT_ID=584964901844-unmghjjsb9n4p23tk11rpkf69ckhegdr.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=secret 
+NEXTAUTH_SECRET=secret
+MONGODB_URI=mongodb+srv://mudassir:8z7z4qUUAM3A7Rbz@cluster0.lg9c3i0.mongodb.net/tabstacker
