--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "cookies": "^0.8.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "mongoose": "^7.4.5",
