--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookies": "^0.8.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "js-cookie": "^3.0.5",
     "mongoose": "^7.4.5",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
@@ -25,5 +26,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.4"
   }
 }
